# de10_nano

./: .gitignore  LICENSE  README.md  create_sdcard_image.sh  de10_nano.code-workspace  generate_dtb.sh  generate_uboot.sh  instructions.txt  query_bridge_states.sh  write_sdcard.sh
device_tree/: custom.dts  generate_dtb.sh
hdl/: README.md  avmm_slave.vhd  blink.sv  cordic.sv  de10_nano_standalone.qsf  de10_nano_standalone.vhd  defines.sv  delayed_reset.sv  gpt_cordic.sv  h2f_bridge_slave.sv  hdmi_pixel_driver.sv  register32.sv  register64.sv  sdram_reader.sv  soc_system_inst.vhd  system_top_level.sv  test_st_sink.sv  test_st_sink.sv.bak  top_level.vhd
hps_fpga/: basic_test.c  output  single_read  single_read.c  single_read_64.c  test_prog.c
ip/: soc_system.qsys
ip/fifo/: frame_fifo.qip  frame_fifo.v  frame_fifo_inst.v
ip/new_fifo/: new_fifo.qip  new_fifo.v  new_fifo_inst.v
kernel/: .config
linux/: .config  config_rootfs.sh  create_sdcard_image.sh  regen_rootfs_tarball.sh
linux/bootscript/: bootscript.txt  u-boot.scr  (+1 more)
misc/: .~lock.addressing.odt#  DE10_Nano_golden_top.sdc  DE10_Nano_golden_top.tcl  addressing.odt  block.drawio  stp1.stp
scripts/: parameters.sh  project_setup.tcl
tb/: .gitignore  tb_dcfifo.sv  tb_fifo_unpack.sv  tb_hdmi_pixel_driver.sv  tb_sdram_controller.sv  tb_st_sink.sv
uboot/: config_distro_bootcmd.h  generate_uboot.sh
user_software/: .gitignore  check_fpga_bridge_status.sh  check_sdram.sh  copy_sw_2_target.sh  load_rbf.sh  single_read  stop_sdram.sh  test_qformat.py
user_software/h2f_rw/: CMakeLists.txt  Makefile  adv7513.h  bridge_config.h  configure_adv7513.c  devmem.c  imload  imload2sdram.c  main.cpp  single_read.c  single_read_64
user_software/h2f_rw/example_code/: adder.cpp  h2f_bridge_test.c
(+21 files in other folders)
